# PineFlow

./: .env.example  .gitignore  README.zh-CN.md
apps/desktop/src/: styles.css  uiText.js
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src/api/: apiClient.js
apps/desktop/src/app/: App.jsx  useAppSettings.js
apps/desktop/src/conversation/: ConversationComposer.jsx  ConversationWorkspace.jsx
apps/desktop/src/providers/: providerCatalog.js
apps/desktop/src/session/: resultState.js  sessionSnapshotProjection.js  useRunExecution.js
resources/skills/: area_calculation.md  attribute_filtering.md  boundary_filter.md  crs_selection.md  csv_to_points.md  dem_analysis.md  export_output.md  field_calculator.md  meter_buffer.md  raster_basics.md  raster_reclassify.md  spatial_join.md
src/pineflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pineflow_agent/core/: models.py
src/pineflow_agent/llm/: context_budget.py  prompts.py  step_context_pack.py
src/pineflow_agent/risks/: policy.py
src/pineflow_agent/rules/: preflight.py
src/pineflow_api/application/: qgis_runtime_info.py  qgis_runtime_proxy.py  run_commands.py  service.py  turn_execution.py  turn_intents.py  turn_runner.py
src/pineflow_api/contracts/: decision_rows.py  models.py  run_snapshots.py  transcript_projection.py
src/pineflow_api/entrypoints/: app.py  worker.py
src/pineflow_api/persistence/: session_projector.py  session_state.py
src/pineflow_api/routing/: triage_router.py  turn_routing.py
src/pineflow_runtime/: runtime.py
(+14 files in other folders)
