[package]
name = "pineflow_desktop"
version = "0.1.0"
description = "PineFlow Desktop"
authors = ["pineflow"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3.6.3"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = 0
incremental = false
